--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx
-COPY nginx.conf /etc/nginx/conf.d/nginx.conf
-COPY . /usr/share/nginx/html
+COPY src/nginx.conf /etc/nginx/conf.d/nginx.conf
+COPY src/. /usr/share/nginx/html
