--- a/src/nginx.conf
+++ b/src/nginx.conf
@@ -1,29 +1,19 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    root /usr/share/nginx/html;
+    server_name  surendra37.com.np www.surendra37.com.np;
 
-    server_name surendra37.com.np;
-    server_tokens off;
+    listen 443 ssl; # managed by Certbot
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+    # RSA certificate
+    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem; # managed by Certbot
 
-    location / {
-        return 301 https://surendra37.com.np$request_uri;
-    }
-}
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
 
-server {
-    listen 443 default_server ssl http2;
-    listen [::]:443 ssl http2;
-
-    server_name surendra37.com.np;
-
-    ssl_certificate /etc/nginx/ssl/live/surendra37.com.np/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/surendra37.com.np/privkey.pem;
-    
-    location / {
-    	# ...
-    }
+    # Redirect non-https traffic to https
+    if ($scheme != "https") {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
 }
