--- a/src/surendra37.com.np.conf
+++ b/src/surendra37.com.np.conf
@@ -10,7 +10,7 @@ server {
     ssl_certificate /etc/letsencrypt/live/surendra37.com.np/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/surendra37.com.np/privkey.pem; # managed by Certbot
 
-    ;include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    #include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
 
     # Redirect non-https traffic to https
     if ($scheme != "https") {
