--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,4 @@ services:
             - 443:443
         restart: always
         volumes:
-            - /etc/letsencrypt:/etc/nginx/ssl/:ro
+            - /etc/letsencrypt:/etc/letsencrypt:ro
