--- a/src/surendra37.com.np.conf
+++ b/src/surendra37.com.np.conf
@@ -2,7 +2,7 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
     root /var/www/html;
-    server_name  surendra37.com.np surendra37.com.np;
+    server_name  surendra37.com.np www.surendra37.com.np;
 
     listen 443 ssl; # managed by Certbot
 
