--- a/surendra37.com.np.conf
+++ b/surendra37.com.np.conf
@@ -17,3 +17,13 @@ server {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 }
+
+server {
+    listen 80;
+    server_name portainer.domain.com;
+    location / {
+        proxy_set_header Host $host;
+        proxy_pass https://127.0.0.1:9443;
+        proxy_redirect off;
+    }
+}
