--- a/surendra37.com.np.conf
+++ b/surendra37.com.np.conf
@@ -10,20 +10,10 @@ server {
     ssl_certificate /etc/letsencrypt/live/surendra37.com.np/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/surendra37.com.np/privkey.pem; # managed by Certbot
 
-    #include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
 
     # Redirect non-https traffic to https
     if ($scheme != "https") {
         return 301 https://$host$request_uri;
     } # managed by Certbot
-}
-
-server {
-    listen 80;
-    server_name portainer.domain.com;
-    location / {
-        proxy_set_header Host $host;
-        proxy_pass https://127.0.0.1:9443;
-        proxy_redirect off;
-    }
 }
